--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -1,8 +1,12 @@
-.createPost{
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    align-items: center;
-    border: .2px solid grey;
-    border-radius: 3px;
+.homeContainer {
+    max-width: 800px;
+    margin: auto;
+    .createPost {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+        align-items: center;
+        border: 0.2px solid grey;
+        border-radius: 3px;
+    }
 }
